welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	T=tableaucouleur()
  for (k <- 1 to 5){
    gauche()
    avance()
    droite()
    peindre()
  }
}
def tableaucouleur(){
  var T=new Array[Color](6)
  for (i <- 0 to 4){
    T(i)= getCouleurSol()
    avance()
  }
  T(5)=getCouleurSol()
  for (i <- 0 to 5){
    recule()
  }
}

def peindre(){
  for (i <- 0 to 4){
    baisseBrosse()
    setCouleurBrosse(T(i))
    leveBrosse()
    avance()
  }
  baisseBrosse()
  setCouleurBrosse(T(5))
  leveBrosse()
  for (i <- 0 to 5){
    recule()
  }
}